<resources>
    <string name="app_name">Lesson2</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="button">Button</string>
    <string name="header_name">Header name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="preferred_day_of_the_week">Preferred day of the week</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="agree_to_terms">Agree to Terms</string>
    <string name="submit">Submit</string>
</resources>
