<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Part2Activity">

    <include
        android:id="@+id/header"
        layout="@layout/activity_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/preferred_day_of_the_week"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/monday" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/wednesday" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/friday" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/agree_to_terms" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/submit" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>